--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
               <div class="module text-module background-{{ projectColor }} text-off-white font-smoothing">      
                 <p class="font-h1">{{ project.projectTagline }}</p>
                 <div class="buttons">
-                  <a class="button" href="/approach/">
+                  <a class="button" href="{{ project.url }}">
                     <span class="border"></span><span class="extra-corners"></span>
                     View Project
                     <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
@@ -97,7 +97,7 @@
             <div class="module text-module background-{{ cycle(['off-white','black'],rowNumber) }} text-{{ cycle(['black','off-white'],rowNumber) }} font-smoothing">      
               <p class="font-h1">{{ block.featureHeadline }}</p>
               <div class="buttons">
-                <a class="button" href="/approach/">
+                <a class="button" href="{{ block.featureLink }}">
                   <span class="border"></span><span class="extra-corners"></span>
                   {{ block.featureLinkLabel }}
                   <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
