Refactor quote media blocks and implement quote carousel

--- a/templates/partials/_media-blocks.html
+++ b/templates/partials/_media-blocks.html
@@ -5,8 +5,8 @@
         {% switch block.type %}
         {% case "stat" %}
           {% include 'partials/media-blocks/_stat' %}
-        {% case "quote" %}
-          {% include 'partials/media-blocks/_quote' %}
+        {% case "quotes" %}
+          {% include 'partials/media-blocks/_quotes' %}
         {% case "text" %}
           {% include 'partials/media-blocks/_text' %}
         {% case "image" %}
