--- a/web/assets/scss/components/_modules.scss
+++ b/web/assets/scss/components/_modules.scss
@@ -53,6 +53,17 @@ blockquote {
   }
 }
 
+.quote-carousel {
+  &.-unslicked {
+    blockquote {
+      display: none;
+      &:first-child {
+        display: block;
+      }
+    }
+  }
+}
+
 .image-wrap {
   overflow: hidden;
   position: relative;
