--- a/web/assets/scss/components/_rows.scss
+++ b/web/assets/scss/components/_rows.scss
@@ -25,15 +25,19 @@
   &.-single {
     .row-block {
       flex-basis: 100%;
+      width: 100%;
     }
   }
 
   &.-halves {
     .row-block {
       flex-basis: 100%;
+      width: 100%;
 
       @include media-md {
         flex-basis: 50%;
+        width: 50%;
+        // max-width: 50%;
       }
 
       &.-right {
@@ -45,6 +49,7 @@
       &.-double {
         @include media-md {
           flex-basis: 100%;
+          width: 100%;
         }
       }
     }
@@ -52,13 +57,16 @@
   &.-quarters {
     .row-block {
       flex-basis: 100%;
+      width: 100%;
 
       @include min-screen($breakpoint-quarters-2col) {
         flex-basis: 50%;
+        width: 50%;
       }
 
       @include min-screen($breakpoint-quarters-4col) {
         flex-basis: 25%;
+        width: 25%;
       }
     }
   }
