--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <!-- checkerboard header w/ theater -->
-  {% for pageHeader in entry.pageHeader %}
+  {% for pageHeader in entry.pageHeader.all() %}
     <div class="checkerboard-header theater-wrap -closed">
       <div class="row -halves theater-cover-top">
         <div class="row-block pull-h1-to-top">
@@ -50,7 +50,7 @@
 
         {% set rowNumber = rowNumber + 1 %}
 
-        {% set project = block.featuredProjects.order('RAND()')[0] ?? null %}
+        {% set project = block.featuredProjects.orderBy('RAND()')[0] ?? null %}
         {% if project %}
 
           {% set projectColor = (project.colorSwatch.label ?? 'black')|lower %}
@@ -65,7 +65,7 @@
               </div>
             </div>
             <div class="row-block">
-              <div class="module text-module background-{{ projectColor }} text-off-white font-smoothing">      
+              <div class="module text-module background-{{ projectColor }} text-off-white font-smoothing">
                 <p class="font-h1">{{ project.projectTagline }}</p>
                 <div class="buttons">
                   <a class="button" href="{{ project.url }}">
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="row-block">
-            <div class="module text-module background-{{ cycle(['off-white','black'],rowNumber) }} text-{{ cycle(['black','off-white'],rowNumber) }} font-smoothing">      
+            <div class="module text-module background-{{ cycle(['off-white','black'],rowNumber) }} text-{{ cycle(['black','off-white'],rowNumber) }} font-smoothing">
               <p class="font-h1">{{ block.featureHeadline }}</p>
               <div class="buttons">
                 <a class="button" href="{{ block.featureLink }}">
