Complete markup and fix styling for stats (particularly single figure stat modules);  Include js considerations for when stat label wraps to second line;  Pull apart _module scss partial and organize; Fix project coloring so that black is provided for posts without color

--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -4,7 +4,7 @@
   (projectImage.getWidth() > projectImage.getHeight() ? 'landscape' : 'portrait') :
   'landscape' %}
 
-{% set projectColor = (project.colorSwatch.label ?? 'black')|lower %}
+{% set projectColor = (project.colorSwatch.label ?? null) ? project.colorSwatch.label|lower : 'black' %}
 
 <article class="project module project-module bigclicky">
   <div class="image-wrap -{{ projectAspectRatio }}">
