--- a/templates/partials/_secondary-header.html
+++ b/templates/partials/_secondary-header.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row -halves">
     <div class="row-block -right">
-      <div class="module text-module background-{{ header.color ?? 'black' }} text-white font-smoothing"> 
+      <div class="module text-module background-{{ (header.color ?? null) ? header.color|lower : 'black' }} text-white font-smoothing">
         <h1 class="font-h2 no-margin">{{ header.title }}</h1>
         {% if header.subtitle ?? false %}<h2 class="font-captions no-margin">{{ header.subtitle }}</h2>{% endif %}
       </div>
