--- a/web/assets/scss/components/_base.scss
+++ b/web/assets/scss/components/_base.scss
@@ -14,11 +14,28 @@ body {
   @include font-p;
   min-height: 100%;
   background: $white;
-  // background: $concrete-med;
 }
 
 a {
   color: inherit;
+}
+
+blockquote {
+  @include font-h1;
+  margin-left: 0;
+  margin-right: 0;
+
+  footer {
+    @include font-details;
+    margin-top: 30px;
+  }
+}
+
+button {
+  border: 0;
+  outline: 0;
+  appearance: none;
+  backgound: transparent;
 }
 
 .svgs-defs {
@@ -27,124 +44,4 @@ a {
 
 .bigclicky {
   cursor: pointer;
-}
-
-
-@mixin semantic-only-list {
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
-}
-.semantic-only-list {
-  @include semantic-only-list;
-}
-
-@mixin bg-cover {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-.bg-cover {
-  @include bg-cover;
-}
-
-@mixin fill {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-.fill {
-  @include fill;
-}
-
-.show-md {
-  display: none;
-  @include media-md {
-    display: block;
-  }
-}
-
-.no-margin {
-  margin: 0;
-}
-
-.no-underline {
-  &, a {
-    text-decoration: none;
-  }
-}
-
-.pad {
-  padding: $padding;
-}
-
-.pad-vertical {
-  padding-top: $padding;
-  padding-bottom: $padding;
-}
-
-
-
-.big-margin {
-  &-bottom, &-vertical {
-    margin-bottom: $padding;
-    @include media-md {
-      margin-bottom: 3*$padding;
-    }
-  }
-
-  &-top, &-vertical {
-    margin-top: $padding;
-    @include media-md {
-      margin-top: 3*$padding;
-    }
-  }
-}
-
-.margin {
-  &-bottom, &-vertical {
-    margin-bottom: $padding;
-    @include media-md {
-      margin-bottom: 2*$padding;
-    }
-  }
-
-  &-top, &-vertical {
-    margin-top: $padding;
-    @include media-md {
-      margin-top: 2*$padding;
-    }
-  }
-}
-
-.pull-h1-to-top {
-  @include media-lg {
-    margin-top: -7px;
-
-    .module {
-      &, &.text-module, &.pad, &.pad-vertical { // specificity
-        padding-top: 0; 
-      }
-    }
-  }
-}
-
-.top-overlap {
-  &-h1 {
-    @include media-md {
-      margin-top: -96px;
-    }
-
-    @include media-lg {
-      margin-top: -113px;
-    }
-  }
-
-  &-p {
-    @include media-md {
-      margin-top: -106px;
-    }
-  }
 }
