--- a/web/assets/scss/components/articles.scss
+++ b/web/assets/scss/components/articles.scss
@@ -1,3 +1,4 @@
+// Project Article
 .project-module {
   overflow: hidden;
   position: relative;
@@ -5,7 +6,7 @@
   &::after, &::before {
     left: 0;
     z-index: 1;
-    top: -100%; 
+    top: -100%;
     content: '';
     width: 200%; // 100% if they choose half-covering overlay
     height: 200%;
@@ -13,20 +14,21 @@
     position: absolute;
     transition: transform 0.5s $ease;
     transform: skew(-18deg) translateX(-100%);
-    
+
   }
   &::before {
     mix-blend-mode: color;
   }
   &::after {
     opacity: 0.66;
-  } 
+  }
   &:hover {
     &::after, &::before {
       transform: skew(-18deg) translateX(0);
     }
   }
 }
+
 .project-title {
   color: $white;
   padding: $padding;
@@ -50,6 +52,7 @@
     text-decoration: none;
   }
 }
+
 // Ensure that, in a row rather than masonty, project-titles will stretch to match height of neighbor title if necessary
 .row-block {
   .project-module {
@@ -58,5 +61,25 @@
     .project-title {
       flex-grow: 1;
     }
+  }
+}
+
+// Post Articles
+.post-module {
+  .category {
+    color: $red;
+  }
+  .title {
+    margin: 5px 0;
+  }
+  .excerpt {
+    margin: 4.5*$beat 0 5.5*$beat;
+  }
+}
+
+// Person Articles
+.person-module {
+  .title {
+    margin: 6px 0 0;
   }
 }
