--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -28,6 +28,9 @@
 @import "components/modules";
 @import "components/forms";
 @import "components/separators";
+@import "components/media-blocks";
+@import "components/images";
+@import "components/project-article";
 
 // Pages
 
