--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -22,7 +22,7 @@
       image: entry.projectImage.one(),
       title: entry.projectClientName,
       subtitle: entry.projectName,
-      color: entry.colorSwatch.label|lower
+      color: entry.colorSwatch.label
     } %}
     {% include 'partials/_secondary-header' %}
 
@@ -77,7 +77,7 @@
           {% if entry.projectAwards|length %}
             <div class="meta-item -full">
               <h3>Awards</h3>
-              <div class="content">
+              <div class="content -spaced">
                 <ul class="semantic-only-list">
                   {% for award in entry.projectAwards.all() %}
                     <li>{{ award.title }}</li>
