--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -9,10 +9,13 @@
   }
 
   .centering-wrap {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    @include media-md {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+    }
   }
 
   .figure {
@@ -40,10 +43,13 @@
     // }
 
     .slash-wrap {
-      display: inline-block;
       position: relative;
-      width: 100%;
+      display: inline-block;
       padding-right: 4*$beat;
+
+      @include media-md {
+        width: 100%;
+      }
 
       &::after {
         right: 0;
@@ -66,11 +72,10 @@
   .label {
     @include font-details;
     margin-top: $beat;
-    width: 100%;
+    // width: 100%;
     max-width: 200px;
 
     @include media-md {
-      flex-basis: 200px;
       text-align: right;
       max-width: 18*$beat;
       align-self: flex-end;
