--- a/web/assets/scss/components/_separators.scss
+++ b/web/assets/scss/components/_separators.scss
@@ -1,30 +1,40 @@
+@mixin hr-top($color) {
+  position: relative;
+
+  &::before {
+    top: 0;
+    z-index: 1;
+    content: '';
+    height: 1px;
+    left: $padding;
+    right: $padding;
+    position: absolute;
+    background: $color;
+  }
+}
+
+@mixin hr-bottom($color) {
+  position: relative;
+
+  &::after {
+    bottom: 0;
+    z-index: 1;
+    content: '';
+    height: 1px;
+    left: $padding;
+    right: $padding;
+    position: absolute;
+    background: $color;
+  }
+}
+
 @each $color-key, $color in $colors {
   .hr-top-#{$color-key} {
-    position: relative;
-    &::before {
-      top: 0;
-      z-index: 1;
-      content: '';
-      height: 1px;
-      left: $padding;
-      right: $padding;
-      position: absolute;
-      background: $color;
-    }
+    @include hr-top($color);
   }
 
   .hr-bottom-#{$color-key} {
-    position: relative;
-    &::after {
-      bottom: 0;
-      z-index: 1;
-      content: '';
-      height: 1px;
-      left: $padding;
-      right: $padding;
-      position: absolute;
-      background: $color;
-    }
+    @include hr-bottom($color);
   }
 }
 
@@ -83,7 +93,7 @@
     }
 
     .text {
-      flex-grow: 1; 
+      flex-grow: 1;
       position: relative;
 
       &::after {
@@ -115,27 +125,51 @@
     background: $off-white;
   }
 
-  &.-half:not(.-row-end) {
-    &:not(:first-child)::before {
-      top: 0;
-      height: 1px;
-      left: $padding;
-      right: calc(-100% + #{$padding});
-    }
-    &::after {
-      right: 0;
-      top: 32px;
-      width: 1px;
-      bottom: $padding;
-    }
-  }
-
-   &.-full {
-    &:not(:first-child)::before {
+  @include max-screen($breakpoint-meta - 1px) {
+    &::before {
       top: 0;
       height: 1px;
       left: $padding;
       right: $padding;
+    }
+
+    &:first-child {
+      &::before { display: none; }
+    }
+  }
+  @include min-screen($breakpoint-meta) {
+
+    &.-half {
+      &::before {
+        top: 0;
+        height: 1px;
+        left: $padding;
+        right: calc(-100% + #{$padding});
+      }
+      &::after {
+        right: 0;
+        top: 32px;
+        width: 1px;
+        bottom: $padding;
+      }
+
+      &.-row-end, &:first-child {
+        &::after, &::before { display: none; }
+      }
+    }
+
+     &.-full {
+
+      &::before {
+        top: 0;
+        height: 1px;
+        left: $padding;
+        right: $padding;
+      }
+
+      &:first-child {
+        &::before { display: none; }
+      }
     }
   }
 }
