--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -32,3 +32,4 @@ $breakpoint-md: 750px;
 $breakpoint-lg: 1200px;
 $breakpoint-quarters-2col: 550px;
 $breakpoint-quarters-4col: 900px;
+$breakpoint-meta: 800px;
